[gd_scene load_steps=45 format=3 uid="uid://y7orxch5h48q"]

[ext_resource type="Script" path="res://scripts/minotauro.gd" id="1_pvmtl"]
[ext_resource type="Texture2D" uid="uid://0s220e0r2i5v" path="res://assets/minotauro/MinotauroIddle.png" id="1_rg08q"]
[ext_resource type="Texture2D" uid="uid://du4y0rjbahyij" path="res://assets/minotauro/MintauroWalk.png" id="2_mairk"]
[ext_resource type="Texture2D" uid="uid://dveao8648x0vm" path="res://assets/minotauro/MintauroAttack.png" id="3_x24sv"]
[ext_resource type="Texture2D" uid="uid://cv3685rbqvg2w" path="res://assets/minotauro/MinotauroDeath.png" id="4_y7oq5"]
[ext_resource type="Texture2D" uid="uid://clia3wvdeb7gu" path="res://assets/minotauro/MinotauroHit.png" id="5_2i3tw"]
[ext_resource type="Script" path="res://scripts/MinotauroStateMachine.gd" id="6_j8x5g"]
[ext_resource type="Script" path="res://scripts/MinotauroIdleState.gd" id="7_btxek"]
[ext_resource type="Script" path="res://scripts/MinotauroChaseState.gd" id="9_hlvbc"]
[ext_resource type="Script" path="res://scripts/MinotauroAttackState.gd" id="10_qt62f"]
[ext_resource type="Script" path="res://scripts/EnemyHurtBox.gd" id="11_1dkgr"]
[ext_resource type="Script" path="res://scripts/MinotauroHurtState.gd" id="11_32ucp"]
[ext_resource type="Script" path="res://scripts/MinotauroDeathState.gd" id="12_sa7gd"]

[sub_resource type="Animation" id="Animation_t6yvt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_rg08q")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.12498, -5.12498)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.20625, 0.20625)]
}

[sub_resource type="Animation" id="Animation_n6xdk"]
resource_name = "attack"
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_x24sv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(-0.125, -5.125)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0.206, 0.206)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.05, 0.25, 0.35, 0.5, 0.6, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 1, 0]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("MinotauroStateMachine/MinotauroAttackState")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack"
}]
}

[sub_resource type="Animation" id="Animation_rd36c"]
resource_name = "death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_y7oq5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.125, -5.125)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.206, 0.206)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_47jg5"]
resource_name = "hit"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_2i3tw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(-0.125, -5.125)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0.206, 0.206)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_8oc4x"]
resource_name = "idle"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_rg08q")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(-0.125, -5.125)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0.206, 0.206)]
}

[sub_resource type="Animation" id="Animation_8h6cl"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_mairk")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(-0.125, -5.125)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0.206, 0.206)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xq6yh"]
_data = {
"RESET": SubResource("Animation_t6yvt"),
"attack": SubResource("Animation_n6xdk"),
"death": SubResource("Animation_rd36c"),
"hit": SubResource("Animation_47jg5"),
"idle": SubResource("Animation_8oc4x"),
"walk": SubResource("Animation_8h6cl")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d37jj"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_su6bo"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eahqo"]
animation = &"hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j2ptl"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sy7ec"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5am4g"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dc6p8"]
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_61vln"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xhauu"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yenjy"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cayv1"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_osenh"]
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mgeid"]
advance_mode = 2
advance_condition = &"is_dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e1b3a"]
advance_mode = 2
advance_condition = &"is_dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tf0em"]
advance_mode = 2
advance_condition = &"is_hit"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_52o1b"]
advance_mode = 2
advance_condition = &"is_hit"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_meqnc"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_54nc8"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_edjgg"]
switch_mode = 2
advance_mode = 2
advance_condition = &"stop"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nxu15"]
advance_mode = 2
advance_condition = &"is_hit"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_o0y77"]
states/Start/position = Vector2(77, 100)
states/attack/node = SubResource("AnimationNodeAnimation_d37jj")
states/attack/position = Vector2(322, 57)
states/death/node = SubResource("AnimationNodeAnimation_su6bo")
states/death/position = Vector2(68, 201)
states/hit/node = SubResource("AnimationNodeAnimation_eahqo")
states/hit/position = Vector2(322, 216)
states/idle/node = SubResource("AnimationNodeAnimation_j2ptl")
states/idle/position = Vector2(170, 57)
states/walk/node = SubResource("AnimationNodeAnimation_sy7ec")
states/walk/position = Vector2(170, 373)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_5am4g"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_dc6p8"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_61vln"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_xhauu"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_yenjy"), "attack", "walk", SubResource("AnimationNodeStateMachineTransition_cayv1"), "walk", "attack", SubResource("AnimationNodeStateMachineTransition_osenh"), "idle", "death", SubResource("AnimationNodeStateMachineTransition_mgeid"), "walk", "death", SubResource("AnimationNodeStateMachineTransition_e1b3a"), "idle", "hit", SubResource("AnimationNodeStateMachineTransition_tf0em"), "walk", "hit", SubResource("AnimationNodeStateMachineTransition_52o1b"), "hit", "idle", SubResource("AnimationNodeStateMachineTransition_meqnc"), "hit", "walk", SubResource("AnimationNodeStateMachineTransition_54nc8"), "death", "End", SubResource("AnimationNodeStateMachineTransition_edjgg"), "attack", "hit", SubResource("AnimationNodeStateMachineTransition_nxu15")]

[sub_resource type="CircleShape2D" id="CircleShape2D_npog0"]
radius = 200.01

[sub_resource type="RectangleShape2D" id="RectangleShape2D_335mb"]
size = Vector2(65, 20)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7v283"]
radius = 19.0
height = 50.0

[node name="Minotauro" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 17
script = ExtResource("1_pvmtl")
health = 10.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-0.12498, -5.12498)
scale = Vector2(0.20625, 0.20625)
texture = ExtResource("1_rg08q")
hframes = 3
vframes = 2

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0.418422, -2.02829)
scale = Vector2(1.19079, 1.19079)
polygon = PackedVector2Array(-7, 22, -13, 8, -17, 3, -17, -2, -11, -15, -7, -19, 6, -19, 13, -14, 16, -6, 21, -4, 18, 1, 10, 5, 7, 14, 6, 22)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xq6yh")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_o0y77")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/attack = false
parameters/conditions/idle = false
parameters/conditions/is_dead = false
parameters/conditions/is_hit = false
parameters/conditions/is_moving = false
parameters/conditions/stop = false

[node name="MinotauroStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "current_state", "anim_tree")]
script = ExtResource("6_j8x5g")
character = NodePath("..")
current_state = NodePath("MinotauroIdleState")
anim_tree = NodePath("../AnimationTree")

[node name="MinotauroIdleState" type="Node" parent="MinotauroStateMachine"]
script = ExtResource("7_btxek")

[node name="MinotauroChaseState" type="Node" parent="MinotauroStateMachine"]
script = ExtResource("9_hlvbc")
move_speed = 100.0

[node name="MinotauroAttackState" type="Node" parent="MinotauroStateMachine"]
script = ExtResource("10_qt62f")

[node name="BufferTimer" type="Timer" parent="MinotauroStateMachine/MinotauroAttackState"]
wait_time = 1.5
one_shot = true

[node name="MinotauroHurtState" type="Node" parent="MinotauroStateMachine" node_paths=PackedStringArray("chase_state")]
script = ExtResource("11_32ucp")
chase_state = NodePath("../MinotauroChaseState")

[node name="MinotauroDeathState" type="Node" parent="MinotauroStateMachine"]
script = ExtResource("12_sa7gd")

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_npog0")

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_335mb")

[node name="EnemyHurtBox" type="Area2D" parent="."]
script = ExtResource("11_1dkgr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtBox"]
position = Vector2(-1, -1)
shape = SubResource("CapsuleShape2D_7v283")

[connection signal="dead" from="." to="MinotauroStateMachine/MinotauroDeathState" method="_on_minotauro_dead"]
[connection signal="animation_finished" from="AnimationTree" to="MinotauroStateMachine/MinotauroHurtState" method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="MinotauroStateMachine/MinotauroAttackState/BufferTimer" to="MinotauroStateMachine/MinotauroAttackState" method="_on_buffer_timer_timeout"]
[connection signal="body_entered" from="PlayerDetection" to="MinotauroStateMachine/MinotauroIdleState" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="MinotauroStateMachine/MinotauroChaseState" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="AttackRange" to="MinotauroStateMachine/MinotauroAttackState" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="AttackRange" to="MinotauroStateMachine/MinotauroAttackState" method="_on_attack_range_body_exited"]
